# ace

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  assignment1.cpp  assignment2.cpp  build.sh  run_assignment.sh  run_test.sh  setup.cfg  template.py  visualize.ipynb  visualize_1.ipynb  visualize_2.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.front.md  feature_draft.md  refactor.md
.github/workflows/: Lint.yml  pytest.yml
src/: CMakeLists.txt  dynamics.cpp  dynamics.hpp  lin_alg.cpp  lin_alg.hpp
tests/: test_assignment1.cpp  test_assignment2.cpp  test_linalg.cpp
