cmake_minimum_required(VERSION 3.10)
project(ACE VERSION 1.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
add_executable(assignment1 assignment1.cpp)
add_executable(assignment2 assignment2.cpp)
add_executable(test1 tests/test_assignment1.cpp)
add_executable(test2 tests/test_assignment2.cpp)
add_executable(test_linalg tests/test_linalg.cpp)
add_subdirectory(src)
target_link_libraries(assignment1 PUBLIC LinAlg)
target_link_libraries(assignment2 PUBLIC LinAlg)
target_link_libraries(test_linalg PUBLIC LinAlg)