[flake8]
ignore = D203,W605,E501,W503,E203,C901
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,env
max-complexity = 10
max-line-length = 99

[black]
max-line-length = 99

[isort]
profile = black

[mypy]
ignore_missing_imports = True
exclude = build
plugins = pydantic.mypy
follow_imports = silent
warn_redundant_casts = True
warn_unused_ignores = True
check_untyped_defs = True

# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[metadata]
name = template#TODO
version = 0.1.0

[options]
packages = find:
install_requires = 
    numpy==1.22.3
    # TODO
